# simple-pages

./: Cargo.toml  Dockerfile  README.md
src/: admin.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  site.rs
static/: app.js
templates/: admin.html  base.html  dashboard.html  login.html  register.html
